# Scaling-Monosemanticity-mech-interp-

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
config/: default.yaml
frontend/: app.js  demo_data.js  index.html  styles.css
scripts/: analyze_features.py  collect_activations.py  run_scaling_laws.py  steer_feature.py  train_sae.py
src/scaling_monosemanticity/: __init__.py  activation_buffer.py  analysis.py  sae.py  scaling_laws.py  steering.py  train.py  utils.py
tests/: test_sae.py
