[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scaling-monosemanticity"
version = "0.1.0"
description = "Reproduction of Anthropic's Scaling Monosemanticity sparse autoencoder methodology"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformer-lens>=2.0.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "einops>=0.7.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
